--- a/btc/test/index.html
+++ b/btc/test/index.html
@@ -2,9 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">    
-    <title>BTC Track v1.3</title>
-    <link rel="icon" href="./icons/32.png" type="image/png">
+.    <link rel="icon" href="./icons/32.png" type="image/png">
     <!-- You can create a 32x32.png from your 512x512.png or 192x192.png -->
     <link rel="apple-touch-icon" href="./icons/192.png">
     <!-- For older browsers or if you want an .ico file -->
